[tool.poetry]
name = "yahoo"
version = "0.1.0"
description = ""
authors = ["David Migoya <dmigoya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
fake-useragent = "^0.1.11"
beautifulsoup4 = "^4.10.0"
xlrd = "1.2.0"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
nbconvert = "^6.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
